tests/semantic_errors/sasha24_3.tl
-- test case 24.
-- Description : functino semantic: declaration without definiton (error)

-- Expected : '3'
require "ifj21" 
 global foo : function( string, string ) : string, number
